--- a/shinjuku.html
+++ b/shinjuku.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" >
-    <title>新宿</title>
+    <title>新宿駅周辺</title>
   </head>
   <body>
     <center>
