--- a/shinjuku.html
+++ b/shinjuku.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css" >
-    <title>新宿駅周辺</title>
+    <title>新宿駅</title>
   </head>
   <body>
     <center>
@@ -11,7 +11,7 @@
       　<button onclick="location.href='kodaira.html'">小平キャンパス周辺</button>
       <button onclick="location.href='kokubunji.html'">国分寺駅周辺</button>
       
-      <h1>新宿駅周辺</h1>
+      <h1>新宿駅周辺ああ</h1>
       <div id="map" style="width:620px; height:400px"></div>
 
       <script type="text/javascript" src="./shop_list/shinjuku_data.js"></script>
